<resources>
    <string name="app_name">Unit Converter</string>
    <string name="area">Area</string>
    <string name="speed">Speed</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="mass">Mass</string>
    <string name="frequency">Frequency</string>
    <string name="convert">Convert</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="enter_units_to_convert">Enter Units to convert</string>
    <string name="convert_icon">Convert Icon</string>
    <string name="default_value">1</string>
</resources>